--- a/style.css
+++ b/style.css
@@ -183,6 +183,7 @@ li {
   align-items: center;
   text-align: center;
   width: 100%;
+  background: url(./img/bg-img2.jpeg) center center/cover;
 }
 
 #schedule #calendar {
