--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ li {
   justify-content: center;
   align-items: center;
   text-align: center;
-  background: url(./img/bg-img2.jpeg) center center/cover;
+  background: url(./img/bg-img1.png) center center/cover;
 }
 
 #home::after {
@@ -183,7 +183,7 @@ li {
   align-items: center;
   text-align: center;
   width: 100%;
-  background: url(./img/bg-img2.jpeg) center center/cover;
+  background: url(./img/bg-img2.png) center center/cover;
 }
 
 #schedule #calendar {
