--- a/style.css
+++ b/style.css
@@ -1,288 +1,39 @@
-/* Global */
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
 body {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 1.2rem;
-  line-height: 1.5;
-  background: #222;
-  color: #fff;
-  position: relative;
+  padding-top: 40px !important;
 }
-
-h1,
-h2,
-h3 {
-  padding: 1rem 0;
-}
-
-h1 {
-  font-size: 4rem;
-}
-
-h2 {
-  font-size: 2rem;
-}
-
-h3 {
-  font-size: 1.4rem;
-}
-
-a {
-  text-decoration: none;
-  color: #fff;
-}
-
-li {
-  list-style: none;
-}
-
-.btn {
-  background: #f4f4f4;
-  color: #222;
-  padding: 10px 20px;
-  margin: 1rem;
-  border-radius: 5px;
-}
-
-.btn:hover {
-  background: #aaa;
-  transition: 0.4s ease;
-}
-
-/* Navbar */
-#main-nav {
-  position: fixed;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  background: #222;
-  opacity: 0.95;
-  z-index: 2;
-  border-bottom: 1px solid #000;
-}
-
-#main-nav #logo {
-  width: 50px;
-  height: 50px;
-  padding: 0.5rem;
-  margin: 0.5rem;
-  background: #000;
-  border-radius: 50%;
-}
-
-#main-nav ul {
-  display: flex;
-  margin: 0.5rem;
-}
-
-#main-nav ul li {
-  padding: 0.4rem;
-  margin: 0.4rem;
-}
-
-#main-nav ul li:hover {
-  text-decoration: underline;
-  color: red;
-  transition: 0.4s ease;
-}
-
-.anchor {
-  padding-top: 60px;
-}
-
-/* Social media links */
-#links {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  z-index: 2;
-  opacity: 0.8;
-}
-
-#links a:hover {
-  color: #aaa;
-  transition: 0.4s ease;
-}
-
-/* Welcome section */
-#home {
-  width: 100vw;
+.masthead {
   height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  background: url(./img/bg-img1.png) center center/cover;
+  min-height: 500px;
+  background-image: url(./img/bg-img1-darkened15.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-#home::after {
-  content: '';
-  background: rgba(55, 55, 55, 0.7);
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
-  z-index: 0;
+.bg-darker {
+  background: #222 !important;
 }
 
-#home h1,
-#home p,
-#home a {
-  z-index: 1;
-}
-
-#home p {
-  font-size: 1.5rem;
-  margin-bottom: 2rem;
-}
-
-/* About Section */
-#about {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-}
-
-#about #about-info {
-  width: 90%;
-}
-
-#about #video {
-  margin: 2rem 0;
-  width: 100%;
-}
-
-#about #video iframe {
-  width: 100%;
-}
-
-#about #band-members {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-
-#about #band-members img {
-  width: 100%;
-}
-
-#about #quote {
-  text-align: center;
-}
-
-/* Schedule section */
 #schedule {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  width: 100%;
-  background: url(./img/bg-img2.png) center center/cover;
+  margin-top: 10vh;
 }
 
-#schedule #calendar {
-  width: 100%;
-  height: 400px;
+.google-calendar {
+  max-height: 70vh;
+  min-height: 400px;
+  max-width: 90vw;
+  margin-bottom: 10vh;
 }
 
-#schedule #calendar iframe {
-  height: 100%;
+.bg-img-2 {
+  background: url('./img/bg-img2.png') center center/cover;
 }
 
-#schedule #contact {
-  display: flex;
-  width: 350px;
-  flex-direction: column;
-  margin: 3rem;
-  padding: 1rem;
-  background: #f4f4f4;
-  color: #222;
-  border-radius: 5px;
+nav a {
+  cursor: pointer !important;
 }
 
-#schedule #contact a {
-  margin-bottom: 1rem;
-  color: #222;
-}
-
-/* Footer */
-#main-footer {
-  text-align: center;
-  font-size: 9px;
-  background-color: #111;
-  color: #ccc;
-  padding: 1rem;
-}
-
-/* Media queries */
-
-@media (min-width: 1000px) {
-  #about {
-    display: grid;
-    margin: 1rem;
-    grid-template-columns: 3fr 4fr;
-    grid-template-areas:
-      'info video'
-      'quote video'
-      'band band';
-  }
-  #about #about-info {
-    grid-area: info;
-  }
-  #about #video {
-    grid-area: video;
-  }
-
-  #about #video iframe {
-    max-width: 600px;
-  }
-  #about #band-members {
-    grid-area: band;
-  }
-  #about #band-members img {
-    max-width: 800px;
-    border-radius: 5px;
-  }
-  #about #quote {
-    grid-area: quote;
-    text-align: left;
-    margin: 0;
-    padding: 0;
-  }
-  #schedule {
-    display: grid;
-    margin: 1rem;
-    justify-content: center;
-    align-items: center;
-    grid-template-columns: 3fr 1fr;
-    grid-template-areas:
-      'heading contact'
-      'calendar contact';
-  }
-  #schedule h2 {
-    grid-area: heading;
-  }
-  #schedule #calendar {
-    grid-area: calendar;
-    height: 500px;
-  }
-  #schedule #calendar iframe {
-    width: 80%;
-  }
-  #schedule #contact {
-    grid-area: contact;
-  }
-}
-
-@media (min-width: 1200px) {
-  #about {
-    grid-template-columns: 1fr 1fr;
-    margin: 1rem;
-  }
+.modal a {
+  color: #333 !important;
+  font-size: 1.2rem;
 }
