--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
 body {
   padding-top: 40px !important;
 }
@@ -31,4 +33,8 @@ nav a {
 .modal a {
   color: #333 !important;
   font-size: 1.2rem;
+}
+
+.vertigo {
+  font-family: 'Permanent Marker' !important;
 }
